# rust-journey

./: Readme.md
api/: Cargo.toml
api/migrations/2019-12-07-070534_create_books/: up.sql
api/src/: main.rs  models.rs
browser_engine/: Cargo.toml
browser_engine/src/: dom.rs  html_parse.rs
chap10_1/: Cargo.toml
chap10_1/src/: main.rs
chap10_2/: Cargo.toml
chap10_2/src/: main.rs
chap13_1/: Cargo.toml
chap13_1/src/: main.rs
chap13_2/: Cargo.toml
chap13_2/src/: lib.rs  main.rs
chap3_1/: Cargo.toml
chap3_1/src/: main.rs
chap3_2/: Cargo.toml
chap3_2/src/: main.rs
chap3_3/: Cargo.toml
chap3_3/src/: main.rs
chap3_4/: Cargo.toml
chap3_4/src/: main.rs
chap4_1/: Cargo.toml
chap4_1/src/: main.rs
chap4_2/: Cargo.toml
chap4_2/src/: main.rs
chap5_1/: Cargo.toml
chap5_1/src/: main.rs
chap5_2/: Cargo.toml
chap5_2/src/: main.rs
chap5_3/: Cargo.toml
chap5_3/src/: main.rs
chap6_1/: Cargo.toml
chap6_1/src/: main.rs
chap6_2/: Cargo.toml
chap6_2/src/: main.rs
chap6_3/: Cargo.toml
chap6_3/src/: main.rs
chap7_1/: Cargo.toml
chap7_1/restaurant/: Cargo.toml
chap7_1/restaurant/src/: lib.rs
chap7_1/src/: lib.rs  main.rs
chap7_2/: Cargo.toml
chap8_1/: Cargo.toml
chap8_1/src/: main.rs
chap8_2/: Cargo.toml
chap8_2/src/: main.rs
chap8_3/: Cargo.toml
chap8_3/src/: main.rs
chap9_1/: Cargo.toml
chap9_1/src/: main.rs
chap9_2/: Cargo.toml
chap9_2/src/: main.rs
chat/client/: Cargo.toml
chat/client/src/: main.rs
chat/server/: Cargo.toml
chat/server/src/: main.rs
d1_filework/: Cargo.toml
d1_filework/src/: error.rs  lib.rs  main.rs
d1_filework/test_data/: transactions.json
d2_intoiterators/: Cargo.toml
d2_intoiterators/src/: lib.rs
d2_iterators/: Cargo.toml
d2_iterators/src/: combi.rs  gen_range.rs  lib.rs
d2_printout/: Cargo.toml
d2_printout/src/: main.rs
d3_lifetimes/: Cargo.toml
d3_lifetimes/src/: main.rs  v2_closure.rs  v3_rc.rs
hello-rocket/: Cargo.toml
hello_cargo/: Cargo.toml
hello_cargo/src/: main.rs
hello_world/: main
markdown_parser/: Cargo.toml  index.html  index.js  package-lock.json  package.json
markdown_parser/src/: lib.rs  parser.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
office_playground/: Cargo.toml
office_playground/src/: main.rs
office_playground10_tests/: Cargo.toml
office_playground10_tests/src/: main.rs
office_playground2/: Cargo.toml
office_playground2/src/: main.rs
office_playground3/: Cargo.toml
office_playground3/src/: main.rs
office_playground4/: Cargo.toml
office_playground4/src/: main.rs
office_playground5/: Cargo.toml
office_playground5/src/: main.rs
office_playground6/: Cargo.toml
office_playground6/src/: main.rs
office_playground6_generic/: Cargo.toml
office_playground6_generic/src/: main.rs
office_playground6_trait/src/: main.rs
office_playground7_box_closure/: Cargo.toml
office_playground7_box_closure/src/: main.rs
office_playground7_iterators/: Cargo.toml
office_playground7_iterators/src/: main.rs
office_playground7_lifetime/: Cargo.toml
office_playground7_lifetime/src/: main.rs
office_playground8_error/: Cargo.toml
office_playground8_error/src/: main.rs
office_playground9_concurrency_channel/: Cargo.toml
office_playground9_concurrency_channel/src/: main.rs
office_playground9_concurrency_mutex/: Cargo.toml
office_playground9_concurrency_mutex/src/: main.rs
office_playground9_concurrency_mutex_example/: Cargo.toml
office_playground9_concurrency_mutex_example/src/: main.rs
office_playground9_concurrency_thread/: Cargo.toml
office_playground9_concurrency_thread/src/: main.rs
office_playground_macro/: Cargo.toml
office_playground_macro/src/: main.rs
pong/: Cargo.toml
pong/src/: main.rs
port-sniffer/: Cargo.toml
port-sniffer/src/: main.rs
rust_api_part_2/: .env  Cargo.toml
rust_api_part_2/src/: main.rs  routes.rs
safari_wasm/: Cargo.toml  index.html  index.js  package-lock.json  package.json
snake/: Cargo.toml
snake/src/: draw.rs  game.rs  main.rs  snake.rs
stdweb_example/: Cargo.toml
stdweb_example/src/: main.rs
stdweb_example/static/: index.html
testlib2/: Cargo.toml
testlib2/src/: C.rs  main.rs
testlib2/src/A/: B.rs  mod.rs
vectorloop_test/: Cargo.toml
vectorloop_test/src/: main.rs
wasm-audio/: Cargo.toml  audio.js  index.html  index.js  package-lock.json  package.json  working.js
wasm-audio/src/: .lib.rs.swp  frequency.rs  lib.rs
wasm-game-of-life/: Cargo.toml  LICENSE_MIT
wasm-game-of-life/src/: lib.rs
wasm-hello-world/: Cargo.toml  index.js  package-lock.json  package.json  webpack.config.js
wasm-hello-world/src/: lib.rs
web_api/: Cargo.toml
web_api/src/: database.rs  handlers.rs  main.rs  models.rs
yt-series/play_ground/: Cargo.toml
yt-series/play_ground/src/: main.rs
yt-series/play_ground2/: Cargo.toml
yt-series/play_ground2/src/: main.rs
