[package]
name = "api"
version = "0.1.0"
authors = ["Chiam Tat Cheng <chiamcheng@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version ="1.4.3" , features=["postgres"]}
dotenv = "0.15.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.7"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.44"

rocket = "0.4.0-dev"
rocket_codegen_next = {git = "https://github.com/SergioBenitez/Rocket.git", branch="master"}

[dependencies.rocket_contrib]
version = "0.4.0-dev"
default_features = false
features = [ "json", "serve"]

[patch.crates-io.rocket]
git = "https://github.com/SergioBenitez/Rocket.git"
rev = "ad0ba0d"

[patch.crates-io.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket.git"
rev = "ad0ba0d"