[package]
name = "d2_printout"
version = "0.1.0"
authors = ["Chiam Tat Cheng <chiamcheng@gmail.com>"]
edition = "2018"

[lib]
name="d2_printout"
path="src/lib.rs"

[[bin]]
name="d2_printout"
path="src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
