[package]
name = "d3_lifetimes"
version = "0.1.0"
authors = ["Chiam Tat Cheng <chiamcheng@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="d1_lifetimes"
path="src/main.rs"

[[bin]]
name="v2_closure"
path="src/v2_closure.rs"


[[bin]]
name="v3_rc"
path="src/v3_rc.rs"

[dependencies]
