[package]
name = "api"
version = "0.1.0"
authors = ["tensor-programming <abeltensor@tensor-programming.com>"]

[dependencies]
diesel = { version = "1.4.6", features = ["postgres"] }
dotenv = "0.13.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0.80"
serde_derive  = "1.0.80"
serde_json = "1.0.32"

rocket = "0.4.2"
[dependencies.rocket_contrib]
version = "0.4.2"
default_features = false
features = [ "json", "serve"]

