[package]
name = "wasm-audio"
version = "0.1.0"
authors = ["tat cheng chiam <chiamcheng@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.1.20"
wasm-bindgen = { version = "0.2.50", features = ["serde-serialize"]  }
js-sys = "0.3.27"
wasm-bindgen-futures = "0.3.27"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
log="*"
[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  "console",
  'AudioContext',
  "OfflineAudioContext",
  "OfflineAudioContextOptions",
    'AudioDestinationNode',
    'AudioNode',
    'AudioParam',
    'GainNode',
    'OscillatorNode',
    'OscillatorType',
]
