[package]
name = "wasm-audio"
version = "0.1.0"
authors = ["tat cheng chiam <chiamcheng@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.1"
wasm-bindgen = { version = "0.2.55", features = ["serde-serialize"]  }
js-sys = "0.3.22"
wasm-bindgen-futures = "0.4.5"
log="0.4.8"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
rustfft = "3.0.0"
sonogram = "0.4.3"
reqwest = "0.10.0-alpha.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'console',
  'AudioContext',
  'OfflineAudioContext',
  'OfflineAudioContextOptions',
  'AudioDestinationNode',
  'AudioBufferSourceNode',
  'BaseAudioContext',
  'AudioParam',
  'AudioBuffer',
  'AudioBufferOptions',
  'AudioNode',
  'AudioParam',
  'GainNode',
  'OscillatorNode',
  'OscillatorType',
]
