[package]
name = "wasm-hello-world"
version = "0.1.0"
authors = ["tat cheng chiam <chiamcheng@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.50"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'GainNode',
  'OscillatorNode',
  'OscillatorType',
  "console",
  "XmlHttpRequest",
  "XmlHttpRequestResponseType",
  "XmlHttpRequestEventTarget",
  "EventListener"
]

[lib]
crate-type=["cdylib"]

